--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                         <p class="text-[#a0a0a0] mb-4">Developed an interactive Weather Analytics Dashboard in Power BI, integrating API data with data modeling, DAX, and visualization techniques to deliver real-time and forecast-based insights.</p>
                         <p class="text-sm font-semibold mb-4 text-[#e0e0e0]">Tools: <span class="font-normal text-[#a0a0a0]">Power BI, Power Query Editor, DAX</span></p>
                         <div class="flex space-x-4">
-                            <a href="#" class="text-[#6200ee] hover:underline transition-colors duration-300">Live Demo</a>
+                            <a href="https://app.powerbi.com/links/fIITy4lJDd?ctid=4398c2fc-05c1-4a0b-a312-c86b714cbc9a&pbi_source=linkShare" class="text-[#6200ee] hover:underline transition-colors duration-300">Live Demo</a>
                             <a href="https://github.com/Shiv7823/PowerBI/blob/main/Weather%20api%20dashboard.pbix" class="text-[#6200ee] hover:underline transition-colors duration-300">GitHub Repo</a>
                         </div>
                     </div>
@@ -233,7 +233,7 @@
                         <p class="text-[#a0a0a0] mb-4">Created a dashboard to visualize customer churn patterns and retention trends. Cleaned and transformed raw data in Power Query Editor, and built interactive visuals with slicers for deeper insights.</p>
                         <p class="text-sm font-semibold mb-4 text-[#e0e0e0]">Tools: <span class="font-normal text-[#a0a0a0]">Power BI, Power Query Editor, DAX</span></p>
                         <div class="flex space-x-4">
-                            <a href="#" class="text-[#6200ee] hover:underline transition-colors duration-300">Live Demo</a>
+                            <a href="https://app.powerbi.com/links/TPPFSKMdu5?ctid=4398c2fc-05c1-4a0b-a312-c86b714cbc9a&pbi_source=linkShare" class="text-[#6200ee] hover:underline transition-colors duration-300">Live Demo</a>
                             <a href="https://github.com/Shiv7823/PowerBI/blob/main/SaiketSystems.pbix" class="text-[#6200ee] hover:underline transition-colors duration-300">GitHub Repo</a>
                         </div>
                     </div>
@@ -263,7 +263,7 @@
                         <p class="text-[#a0a0a0] mb-4">Designed an interactive dashboard to analyze Netflix movies by genre, release year, and duration. Performed data cleaning and preprocessing in Power Query Editor, and used DAX for custom measures with dynamic filters.</p>
                         <p class="text-sm font-semibold mb-4 text-[#e0e0e0]">Tools: <span class="font-normal text-[#a0a0a0]">Power BI, Power Query Editor, DAX</span></p>
                         <div class="flex space-x-4">
-                            <a href="#" class="text-[#6200ee] hover:underline transition-colors duration-300">Live Demo</a>
+                            <a href="https://app.powerbi.com/links/Nou-QQK2VU?ctid=4398c2fc-05c1-4a0b-a312-c86b714cbc9a&pbi_source=linkShare" class="text-[#6200ee] hover:underline transition-colors duration-300">Live Demo</a>
                             <a href="https://github.com/Shiv7823/PowerBI/blob/main/netflix%20data%20analysis.pbix" class="text-[#6200ee] hover:underline transition-colors duration-300">GitHub Repo</a>
                         </div>
                     </div>
@@ -273,7 +273,7 @@
                         <p class="text-[#a0a0a0] mb-4">Developed a dashboard to track sales performance, revenue trends, and regional sales distribution. Used Power Query Editor for data cleaning and transformation, and applied DAX for calculated KPIs such as total revenue, profit margin, and sales growth.</p>
                         <p class="text-sm font-semibold mb-4 text-[#e0e0e0]">Tools: <span class="font-normal text-[#a0a0a0]">Power BI, Power Query Editor, DAX</span></p>
                         <div class="flex space-x-4">
-                            <a href="#" class="text-[#6200ee] hover:underline transition-colors duration-300">Live Demo</a>
+                            <a href="https://app.powerbi.com/links/MEt0bFQuQa?ctid=4398c2fc-05c1-4a0b-a312-c86b714cbc9a&pbi_source=linkShare" class="text-[#6200ee] hover:underline transition-colors duration-300">Live Demo</a>
                             <a href="https://github.com/Shiv7823/PowerBI/blob/main/Sales_Analysis_Dashboard.pbix" class="text-[#6200ee] hover:underline transition-colors duration-300">GitHub Repo</a>
                         </div>
                     </div>
