--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </p>
             <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-6 mt-8">
                 <a href="#projects" class="bg-[#6200ee] text-white font-bold py-3 px-6 rounded-full shadow-lg transition-transform transform hover:scale-105 duration-300">View My Work</a>
-                <a href="Latex resume.pdf" class="border border-[#6200ee] text-[#6200ee] font-bold py-3 px-6 rounded-full hover:bg-[#6200ee] hover:text-white transition-colors duration-300">View Resume</a>
+                <a href="#" class="border border-[#6200ee] text-[#6200ee] font-bold py-3 px-6 rounded-full hover:bg-[#6200ee] hover:text-white transition-colors duration-300">View Resume</a>
             </div>
         </div>
     </section>
